gcc/testsuite/rust/compile/never_type_err1.rs
fn test() {
    let a;

    // FIXME: Unimplemented features
    a = if true { // { dg-error "expected .T.. got .!." }
        return;
    } else {
        return;
    };
}

fn main() {
    test();
}
